# my-first-flask

./: README.md  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/: home.html
