[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask_example_package_alex_lvh"
version = "0.0.1"
authors = [
  { name="Alex Lvh", email="lvfuming@outlook.com" },
]
description = "A small example package of flask"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"